--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "chess-kit": "^1.3.0",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
