--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@types/shortid": "^0.0.32",
     "chess-kit": "^1.3.0",
     "dotenv": "^16.4.5",
     "postcss": "^8.4.38",
@@ -17,9 +18,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "shortid": "^2.2.16",
     "tailwindcss": "^3.4.3",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
